force-app/main/default/objects/Session__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End Time</description>
    <inlineHelpText>End Time</inlineHelpText>
    <label>End Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>