force-app/main/default/objects/Session__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <description>Session Date</description>
    <inlineHelpText>Date of Session</inlineHelpText>
    <label>Session Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>