force-app/main/default/objects/Session__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start Time</description>
    <inlineHelpText>Start Time</inlineHelpText>
    <label>Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>