force-app/main/default/objects/Session__c/validationRules/End_Time_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_After_Start</fullName>
    <active>true</active>
    <description>It ensures to fill End time must be after Start time</description>
    <errorConditionFormula>End_Time__c &lt;=  Start_Time__c</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End time must be after Start time.</errorMessage>
</ValidationRule>