force-app/main/default/objects/Session__c/validationRules/Session_Date_must_be_After_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Date_must_be_After_Today</fullName>
    <active>true</active>
    <errorConditionFormula>Session_Date__c &lt;= TODAY()</errorConditionFormula>
    <errorMessage>Session date cannot be in the past.</errorMessage>
</ValidationRule>