force-app/main/default/objects/Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Session_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>